add eventListener to enable toggle button, enable adding book card to the list by filling the form

--- a/03_DOM_Events/style.css
+++ b/03_DOM_Events/style.css
@@ -76,6 +76,10 @@ main {
   font-weight: bold;
 }
 
+button, [type="submit"] {
+  cursor: pointer;
+}
+
 #form-wrapper {
   border-top: solid;
   border-bottom: solid;
